# NameStatistics

./: README.md  pyproject.toml  requirements.txt
name_statistics/: __init__.py
name_statistics/exc/: __init__.py
name_statistics/utils/: slugify.py  user_agent.py
tests/: test.py
