[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "name-statistics"
version = "0.1.0"
authors = [
    { name = "pesaq", email = "root.email@example.com" },
]
description = "Пакет для поиска информации по заданному имени в мире"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent",
    "lxml",
    "transliterate",
]

[project.urls]
Homepage = "https://github.com/pesaq/NameStatistics"